# EAgentBase

./: .env.example  .gitignore  README.md  mcp_servers.json.example  pyproject.toml  start.py
agents/: BothAgent.md  Echo.md  PlanOnlyAgent.md
app/: __init__.py  config.py  main.py
app/bootstrap/: __init__.py  container.py  factory.py
app/core/: __init__.py
app/core/hooks/: __init__.py  base.py  errors.py  guard.py  persist_large_tool_result_hook.py  pipeline.py  types.py
app/core/loop/: __init__.py  agent_loop.py
app/core/models/: __init__.py  agent.py  error.py  event.py  execution_context.py  llm_chunk.py  run.py  session.py  stored_message.py  task.py  tool.py
app/core/ports/: __init__.py  cancellation.py  stores.py  transactions.py
app/core/runtime/: __init__.py  agent_runtime.py  (+4 more)
app/services/: __init__.py  agent_provider.py  chat_event_processor.py  chat_run_lock.py  chat_service.py  child_agent_runner.py  run_control_service.py  session_cleanup_service.py  session_service.py  task_service.py
skills/test-skill/: SKILL.md
tests/: conftest.py  fakes.py
tests/curl_test/: _collect_sse.py  smoke_test_store_protocol.sh  test_cancel.sh  test_cancel_run.sh  test_llm_agent_visibility.sh  test_master_mount_smoke.sh  test_multi_master_smoke.sh  test_plan_isolation.sh  test_resumable_subagents.sh  test_subagent_mount.sh  test_worker_chat.sh  verify_mount_errors.py  verify_subagent_mount.py
tests/helpers/: sse.py
tests/integration/: test_multi_agent_task_flow.py  test_task_flow.py
tests/unit/: test_config.py  test_logging_boundary.py  test_main.py
(+100 files in other folders)
